快应用的list list中播放video的状态管理

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,6 +29,9 @@
     "pages": {
       "Home": {
         "component": "home"
+      },
+      "Detail": {
+        "component": "detail"
       }
     }
   },
